# ihle-game

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: audio.rs  boss.rs  collision.rs  consts.rs  entities.rs  main.rs  npc.rs  player.rs  save.rs  shop.rs  sprites.rs  ui.rs  world.rs
src/game/: assets.rs  audio.rs  delivery.rs  fx.rs  gamestate.rs  highscore.rs  hud.rs  map.rs  mod.rs  navi.rs  npc.rs  player.rs  shop.rs  speech.rs
