[package]
name = "germering_delivery"
version = "0.1.0"
edition = "2021"
authors = ["Germering Delivery"]
description = "Ihle-Sprinter Lieferfahrer Highscore Game"

[dependencies]
bevy = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
